--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName= com.mysql.jdbc.Driver
-jdbc.url= jdbc:mysql://127.0.0.1:3306/study
+jdbc.url= jdbc:mysql://127.0.0.1:3306/example
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=
 #定义初始连接数
 initialSize=0  
 #定义最大连接数
